[gd_scene load_steps=3 format=2]

[ext_resource path="res://global_theme.tres" type="Theme" id=1]
[ext_resource path="res://board_select/BoardSelect.gd" type="Script" id=2]

[node name="BoardSelect" type="VBoxContainer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.5
margin_right = 100.5
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeLabel" type="Label" parent="."]
margin_top = 158.0
margin_right = 265.0
margin_bottom = 208.0
theme = ExtResource( 1 )
text = "Board Size"
align = 1
valign = 1
uppercase = true

[node name="SizeOption" type="OptionButton" parent="."]
margin_top = 212.0
margin_right = 265.0
margin_bottom = 268.0
theme = ExtResource( 1 )

[node name="DifficultyLabel" type="Label" parent="."]
margin_top = 272.0
margin_right = 265.0
margin_bottom = 322.0
theme = ExtResource( 1 )
text = "Difficulty"
align = 1
valign = 1
uppercase = true

[node name="DifficultyOption" type="OptionButton" parent="."]
margin_top = 326.0
margin_right = 265.0
margin_bottom = 382.0
theme = ExtResource( 1 )

[node name="StartButton" type="Button" parent="."]
margin_top = 386.0
margin_right = 265.0
margin_bottom = 442.0
theme = ExtResource( 1 )
text = "START"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
